--- a/ai/src/index.css
+++ b/ai/src/index.css
@@ -1,14 +1,12 @@
 body {
   margin: 0;
-  font-family: jersey 25, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Quicksand",
+    BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #0f1b21e0;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas,
-    "Courier New", monospace;
 }
